<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTitulo"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginmsj"/>

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:hint="@string/loginEmail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/loginPass"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/logbtn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/forestgreen"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/loginboton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/texto"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</LinearLayout>